# rwapred11

./: .env.example  .gitignore  DEPLOY.md  README.md  docker-compose.yml
api/: alembic.ini  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 001_init_clubs_and_users.py  002_user_username_is_active.py  003_club_contact_fields.py  004_add_lifter_competition_registration.py
api/app/: __init__.py  main.py  seed.py
api/app/core/: __init__.py  config.py  database.py  deps.py  errors.py  jwt.py  logging.py  phases.py  security.py
api/app/models/: __init__.py  club.py  competition.py  lifter.py  registration.py  user.py
api/app/repositories/: __init__.py  club_repo.py  competition_repo.py  lifter_repo.py  registration_repo.py  user_repo.py
api/app/routers/: __init__.py  auth.py  clubs.py  competitions.py  health.py  lifters.py  registrations.py
api/app/schemas/: __init__.py  auth.py  club.py  competition.py  lifter.py  registration.py
api/app/services/: __init__.py  auth_service.py  club_service.py  competition_service.py  lifter_service.py  registration_service.py
api/tests/: __init__.py  conftest.py  test_auth.py  test_clubs.py  test_competitions.py  test_lifters.py  test_registrations.py
web/: .env.example  .eslintrc.cjs  .gitignore  FRONTEND.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/src/: App.vue  main.ts
web/src/components/: FormaPolje.vue  Gumb.vue  Modal.vue  Navigacija.vue  Obavijest.vue  Obavijesti.vue  StatusBadge.vue  Tablica.vue
web/src/types/: api.ts  (+8 more)
(+33 files in other folders)
